criação do Header

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,8 @@
         margin: 0;
         padding: 0;
         font-family: sans-serif;
-        background: #3693f3;
+        background: #36393f;
+        box-sizing: border-box;
       }
     </style>
   </head>
